# operational-identity-core

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9318adc9d676_initial_identity_core_schema.py
docs/: architecture.md  ecosystem.md  future-runtime-adapters.md  identity-propagation.md  interoperability.md  observability-pipeline.md  organizational-platform-vision.md  permission-aggregation.md  persistence-lifecycle.md  request-lifecycle.md  roadmap.md  runtime-portability.md
docs/diagrams/: component-view.md  container-view.md  runtime-flow.md  system-context.md
examples/cli_runtime/: main.py
examples/flask_integration/: app.py
examples/jwt_payload_assembly/: example.py
examples/shared/: fake_user_repository.py
operational_identity_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
operational_identity_core/application/dto/: create_user_dto.py  identity_context_dto.py
operational_identity_core/application/use_cases/: assemble_identity_context_use_case.py  create_user_use_case.py  disable_user_use_case.py  resolve_permissions_use_case.py
operational_identity_core/domain/entities/: identity_context.py  permission.py  role.py  user.py
scripts/: create_tables.py
tests/application/: test_create_user_use_case.py  test_disable_user_use_case.py  test_resolve_permissions_use_case.py
tests/domain/: test_identity_activation.py  test_identity_resolution.py  test_permission_resolution.py
tests/integration/: test_postgres_integration.py
(+21 files in other folders)
