[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operational-identity-core"
version = "0.1.0"
description = "Framework agnostic operational identity core."
authors = [
    { name = "Richardson Almeida" }
]
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["operational_identity_core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
